--- a/profile/package.json
+++ b/profile/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "start": "sirv public --no-clear -c",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
