--- a/location/package.json
+++ b/location/package.json
@@ -17,7 +17,6 @@
     "pinia": "^2.0.13",
     "roboto-fontface": "*",
     "vue": "^3.2.33",
-    "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -30,7 +29,6 @@
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-rc.20",
     "@vue/tsconfig": "^0.1.3",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.0",
     "cypress": "^9.5.4",
     "eslint": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -43,8 +41,6 @@
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
     "vitest": "^0.9.3",
-    "vue-cli-plugin-vuetify": "~2.4.8",
-    "vue-tsc": "^0.34.7",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vue-tsc": "^0.34.7"
   }
 }
