--- a/location/package.json
+++ b/location/package.json
@@ -18,14 +18,12 @@
     "pinia": "^2.0.13",
     "roboto-fontface": "*",
     "sirv-cli": "^2.0.0",
-    "vue": "^3.2.33",
-    "webfontloader": "^1.0.0"
+    "vue": "^3.2.33"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.27",
-    "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
